--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NewPaging3">
         <activity
+            android:name=".SpinnerWithSearchDialog"
+            android:parentActivityName=".MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".RecyclerViewSectionHeader"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".RetrofitLiveDataWithFlowApi"
             android:exported="false"
