--- a/JetPackCompose/build.gradle
+++ b/JetPackCompose/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         compose_version = '1.1.0-beta01'
         lifecycle_version = '2.1.0'
+        roomVersion = "2.4.2"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
