Learn navigation with jetpack compose

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,4 +110,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
+    //Navigation
+    implementation("androidx.navigation:navigation-compose:$nav_version")
+
 }
