--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         compose_version = '1.1.0-beta01'
         lifecycle_version = '2.1.0'
         roomVersion = "2.4.2"
+        nav_version = "2.5.0"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
