--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,18 @@
 buildscript {
     ext {
         compose_version = '1.1.0-beta01'
-        lifecycle_version = '2.1.0'
+        lifecycle_version = '2.2.0'
         roomVersion = "2.4.2"
         nav_version = "2.5.0"
+        //hilt_version = "2.38.1"
     }
+    //You can use this way to add Class Path [Another way-> [settings.gradle-> resolutionStrategy]]
+//    dependencies {
+//        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+//        // Firebase SDK
+//        //classpath 'com.google.gms:google-services:4.3.13'
+//    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.1' apply false
