--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
             android:label="@string/title_activity_another"
             android:theme="@style/Theme.JetPackComposePractice" />
         <activity
+            android:name=".todo.ui.TodoActivity"
+            android:exported="false"
+            android:label="ToDoActivity"
+            android:theme="@style/Theme.JetPackComposePractice" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
