--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
-        lifecycle_version = '2.2.0'
-        roomVersion = "2.4.2"
-        nav_version = "2.5.0"
-        //hilt_version = "2.38.1"
+        compose_version = '1.1.1'
+        hilt_version = '2.39.1'
+        room_version = "2.4.2"
+        kotlin_version = "1.6.10"
+        accompanist_version = '0.20.2'
+        lifecycle_version = "2.5.0-rc01"
     }
     //You can use this way to add Class Path [Another way-> [settings.gradle-> resolutionStrategy]]
 //    dependencies {
@@ -12,6 +13,14 @@ buildscript {
 //        // Firebase SDK
 //        //classpath 'com.google.gms:google-services:4.3.13'
 //    }
+
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
