--- a/settings.gradle
+++ b/settings.gradle
@@ -4,14 +4,14 @@ pluginManagement {
         google()
         mavenCentral()
     }
-    resolutionStrategy {
-        eachPlugin {
-            def hilt_version = "2.41"
-            if( requested.id.id == 'dagger.hilt.android.plugin') {
-                useModule("com.google.dagger:hilt-android-gradle-plugin:$hilt_version")
-            }
-        }
-    }
+//    resolutionStrategy {
+//        eachPlugin {
+//            def hilt_version = "2.41"
+//            if( requested.id.id == 'dagger.hilt.android.plugin') {
+//                useModule("com.google.dagger:hilt-android-gradle-plugin:$hilt_version")
+//            }
+//        }
+//    }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
