--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
     testImplementation 'junit:junit:'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
@@ -111,5 +112,8 @@ dependencies {
     implementation("androidx.compose.runtime:runtime:1.3.0-alpha01")
     implementation("androidx.compose.runtime:runtime-livedata:1.3.0-alpha01")
     implementation("androidx.compose.runtime:runtime-rxjava2:1.3.0-alpha01")
+
+    //Materials Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
 }
