--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,7 @@ dependencies {
     //dagger hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0-rc01")
 
     kapt("org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.3.0")
 
