--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".RetrofitAPI.RetrofitActivity"
+            android:name=".retrofitAPI.RetrofitActivity"
             android:exported="false"
             android:label="Practice API Retrofit"
             android:theme="@style/Theme.JetPackComposePractice" />
@@ -40,7 +40,7 @@
         </activity>
 
         <activity
-            android:name=".ViewPager.OnBoardingActivity"
+            android:name=".viewPager.OnBoardingActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.JetPackComposePractice">
