--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JetPackComposePractice"
         tools:targetApi="31">
-
+        <activity
+            android:name=".feature_note.NoteActivity"
+            android:exported="false"
+            android:label="Note Activity"
+            android:theme="@style/Theme.JetPackComposePractice" />
         <activity
             android:name=".retrofitAPI.RetrofitActivity"
             android:exported="false"
@@ -36,9 +40,7 @@
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.JetPackComposePractice">
-        </activity>
-
+            android:theme="@style/Theme.JetPackComposePractice"></activity>
         <activity
             android:name=".viewPager.OnBoardingActivity"
             android:exported="true"
@@ -46,9 +48,9 @@
             android:theme="@style/Theme.JetPackComposePractice">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
