Learn navition with passing argument by gson

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,5 +123,6 @@ dependencies {
     //Materials Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
-
+    //Gson
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
