--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         android:theme="@style/Theme.JetPackComposePractice"
         tools:targetApi="31">
         <activity
+            android:name=".navigationPassingDataNavHost.PassingDataNavHost"
+            android:exported="false"
+            android:label="@string/title_activity_passing_data_nav_host"
+            android:theme="@style/Theme.JetPackComposePractice" />
+        <activity
             android:name=".screen.NavGraphActivity"
             android:exported="false"
             android:label="@string/title_activity_nav_graph"
