--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,12 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+    //material 3
+    implementation "androidx.compose.material3:material3:$material3_version"
+
+    //Materials Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
 
     // Compose dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha01"
@@ -82,10 +88,15 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     //moshi
     implementation("com.squareup.moshi:moshi-kotlin:1.12.0")
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+    //Ok Http
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
     //dagger hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -98,6 +109,8 @@ dependencies {
     //kotlin Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$ktx_coroutine_version"
 
     // android ktx
     implementation 'androidx.activity:activity-ktx:1.5.0'
@@ -120,9 +133,22 @@ dependencies {
     implementation("androidx.compose.runtime:runtime-livedata:1.3.0-alpha01")
     implementation("androidx.compose.runtime:runtime-rxjava2:1.3.0-alpha01")
 
-    //Materials Icons
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-
     //Gson
     implementation 'com.google.code.gson:gson:2.9.0'
+
+    // Accompanist (Jetpack Compose Flow Layouts)
+    implementation "com.google.accompanist:accompanist-flowlayout:0.15.0"
+    // Accompanist (Jetpack Compose Pager, indicator)
+    implementation "com.google.accompanist:accompanist-pager:0.24.6-alpha"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.24.6-alpha"
+
+    // Accompanist (System UI Controller)
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.17.0'
+    implementation 'com.google.accompanist:accompanist-insets:0.17.0'
+
+    //Camera
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation 'androidx.camera:camera-view:1.0.0-alpha28'
 }
