--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
         android:theme="@style/Theme.JetPackComposePractice"
         tools:targetApi="31">
         <activity
+            android:name=".albumFeature.AlbumDetailsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_album_details"
+            android:theme="@style/Theme.JetPackComposePractice" >
+
+        </activity>
+        <activity
             android:name=".navigationPassingDataNavHost.PassingDataNavHost"
             android:exported="false"
             android:label="@string/title_activity_passing_data_nav_host"
@@ -53,19 +60,26 @@
             android:theme="@style/Theme.JetPackComposePractice" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.JetPackComposePractice" />
-        <activity
-            android:name=".viewPager.OnBoardingActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.JetPackComposePractice">
+            android:theme="@style/Theme.JetPackComposePractice" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".viewPager.OnBoardingActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.JetPackComposePractice">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+
         </activity>
     </application>
 
