--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,15 @@
         android:theme="@style/Theme.JetPackComposePractice"
         tools:targetApi="31">
         <activity
+            android:name=".uiPractice.loginScreen.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_g"
+            android:theme="@style/Theme.JetPackComposePractice" />
+        <activity
             android:name=".albumFeature.AlbumDetailsActivity"
             android:exported="false"
             android:label="@string/title_activity_album_details"
-            android:theme="@style/Theme.JetPackComposePractice" >
-
-        </activity>
+            android:theme="@style/Theme.JetPackComposePractice"></activity>
         <activity
             android:name=".navigationPassingDataNavHost.PassingDataNavHost"
             android:exported="false"
@@ -62,7 +65,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.JetPackComposePractice" >
+            android:theme="@style/Theme.JetPackComposePractice">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -74,11 +77,13 @@
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.JetPackComposePractice">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
 
         </activity>
     </application>
