--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,12 +57,16 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation 'androidx.activity:activity-compose:1.5.0'
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    //Testing Dependency
     testImplementation 'junit:junit:'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    testImplementation "com.google.truth:truth:1.1.3"
+
 
     //material 3
     implementation "androidx.compose.material3:material3:$material3_version"
@@ -151,4 +155,8 @@ dependencies {
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation 'androidx.camera:camera-view:1.0.0-alpha28'
+
+
+
+
 }
