--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,20 @@
         android:theme="@style/Theme.JetPackComposePractice"
         tools:targetApi="31">
         <activity
+            android:name=".learnTesting.TestingActivity"
+            android:exported="false"
+            android:label="@string/title_activity_testing"
+            android:theme="@style/Theme.JetPackComposePractice" />
+        <activity
             android:name=".uiPractice.loginScreen.LoginActivity"
             android:exported="false"
-            android:label="@string/title_activity_g"
+            android:label="Login Activity"
             android:theme="@style/Theme.JetPackComposePractice" />
         <activity
             android:name=".albumFeature.AlbumDetailsActivity"
             android:exported="false"
             android:label="@string/title_activity_album_details"
-            android:theme="@style/Theme.JetPackComposePractice"></activity>
+            android:theme="@style/Theme.JetPackComposePractice" />
         <activity
             android:name=".navigationPassingDataNavHost.PassingDataNavHost"
             android:exported="false"
