--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         android:theme="@style/Theme.JetPackComposePractice"
         tools:targetApi="31">
         <activity
+            android:name=".todoMVVM.TodoMainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_todo_main"
+            android:theme="@style/Theme.JetPackComposePractice" />
+        <activity
             android:name=".learnTesting.TestingActivity"
             android:exported="false"
             android:label="@string/title_activity_testing"
