--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'kotlinx-serialization'
 }
 
 android {
@@ -79,6 +80,10 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-paging:$room_version"
+
+    // Paging 3.0
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha15'
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -88,6 +93,11 @@ dependencies {
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
+
+    // KotlinX Serialization
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
+
     //moshi
     implementation("com.squareup.moshi:moshi-kotlin:1.12.0")
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
@@ -100,6 +110,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
 
     kapt("org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.3.0")
@@ -122,6 +133,7 @@ dependencies {
 
     //navigation
     implementation("androidx.navigation:navigation-compose:2.5.0")
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.16.0"
 
     // Coil Image Dependency
     implementation("io.coil-kt:coil-compose:2.1.0")
