--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+        //API_KEY in -> /gradle.properties
+        //its now git ignore -> API_KEY= "--key--"
+
+        buildConfigField("String", "API_KEY", API_KEY)
 
     }
 
@@ -136,6 +140,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-navigation-animation:0.16.0"
 
     // Coil Image Dependency
+    implementation("io.coil-kt:coil-compose:1.3.2")
     implementation("io.coil-kt:coil-compose:2.1.0")
 
     //LiveData
