--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.useNewApkCreator=true
+API_KEY="vy-L28aH9Ef8G4EuThcocxt88jMbiSf78G2_FYhqrsg"
+android.enableJetifier=true
