--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JetPackComposePractice"
+        android:theme="@style/Theme.CustomSplashScreenTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".onboardingCompose.BoardingWithSplashScreen"
+            android:exported="false"
+            android:label="@string/title_activity_boarding_with_splash_screen"
+            android:theme="@style/Theme.CustomSplashScreenTheme">
+
+
+        </activity>
         <activity
             android:name=".paging3.Paging3Activity"
             android:exported="false"
@@ -90,12 +98,12 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.JetPackComposePractice">
+            android:theme="@style/Theme.CustomSplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".viewPager.OnBoardingActivity"
