--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.jetpackcomposepractice"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -64,6 +64,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation 'androidx.activity:activity-compose:1.5.0'
+    implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.2.2'
     testImplementation 'junit:junit:4.12'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
@@ -175,6 +176,7 @@ dependencies {
 
     //Jetpack Compose Permissions
     implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-permissions:0.26.1-alpha"
 
     // Local unit tests
     testImplementation "androidx.test:core:1.4.0"
