--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.jetpackcomposepractice">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!--    For Permission Activity-->
@@ -23,7 +24,7 @@
         android:theme="@style/Theme.CustomSplashScreenTheme"
         tools:targetApi="31">
         <activity
-            android:name=".permissionCheck.PermissionActivity"
+            android:name=".permissionAndConnectivityCheck.PermissionActivity"
             android:exported="false"
             android:label="@string/title_activity_permission"
             android:theme="@style/Theme.CustomSplashScreenTheme" />
