--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
     implementation 'com.google.android.material:material:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-util:$compose_version"
@@ -182,6 +182,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
     implementation "com.google.accompanist:accompanist-permissions:0.26.1-alpha"
 
+    implementation "androidx.savedstate:savedstate-ktx:1.1.0"
 
     // Local unit tests
     testImplementation "androidx.test:core:1.4.0"
