learn constrins layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
     debugImplementation "androidx.compose.ui:ui-tooling"
 
     //material 3
